# medaillon-cookie-cutter

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml  template.env
{{ cookiecutter.project_slug }}/config/minio-mc/: init.sh
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/utils/: config.py
