[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = ""
authors = [
    {name = "{{ cookiecutter.author }}"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "deltalake>=1.2.0",
    "pre-commit>=4.3.0",
    "commitizen>=4.9.1"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"